SnowFlat: fix image sprite overflow on comment buttons

--- a/qa-theme/SnowFlat/qa-styles.css
+++ b/qa-theme/SnowFlat/qa-styles.css
@@ -1060,9 +1060,10 @@ blockquote p {
 	position: relative;
 }
 
-.qa-vote-up-button, .qa-vote-down-button, .qa-voted-up-button, .qa-voted-down-button, .qa-vote-up-disabled, .qa-vote-down-disabled {
+.qa-vote-up-button, .qa-vote-down-button, .qa-voted-up-button,
+.qa-voted-down-button, .qa-vote-up-disabled, .qa-vote-down-disabled {
 	text-indent: -9999px;
-	background: url('images/vote-buttons-2.png') no-repeat;
+	background: transparent url('images/vote-buttons-3.png') no-repeat;
 	width: 16px;
 	height: 10px;
 	border: none;
@@ -1073,56 +1074,67 @@ blockquote p {
 	-webkit-transition: all 0s;
 	transition: all 0s;
 }
-.qa-vote-up-button:hover, .qa-vote-up-button:focus, .qa-vote-up-button:active,.qa-vote-down-button:hover, .qa-vote-down-button:focus, .qa-vote-down-button:active,
-.qa-voted-up-button:hover, .qa-voted-up-button:focus, .qa-voted-up-button:active,.qa-voted-down-button:hover, .qa-voted-down-button:focus, .qa-voted-down-button:active,
-.qa-vote-up-disabled:hover, .qa-vote-up-disabled:focus, .qa-vote-up-disabled:active,.qa-vote-down-disabled:hover, .qa-vote-down-disabled:focus, .qa-vote-down-disabled:active {
+.qa-vote-up-button:hover, .qa-vote-up-button:focus, .qa-vote-up-button:active,
+.qa-vote-down-button:hover, .qa-vote-down-button:focus, .qa-vote-down-button:active,
+.qa-voted-up-button:hover, .qa-voted-up-button:focus, .qa-voted-up-button:active,
+.qa-voted-down-button:hover, .qa-voted-down-button:focus, .qa-voted-down-button:active,
+.qa-vote-up-disabled:hover, .qa-vote-up-disabled:focus, .qa-vote-up-disabled:active,
+.qa-vote-down-disabled:hover, .qa-vote-down-disabled:focus, .qa-vote-down-disabled:active {
 	border: none;
+	background-color: transparent;
 	cursor: pointer;
 }
 
 .qa-vote-up-button {
 	background-position: 0 0;
-	top: 10px;
+	top: 12px;
 }
-.qa-vote-up-button:hover, .qa-vote-up-button:focus, .qa-vote-up-button:active {
+.qa-vote-up-button:hover,
+.qa-vote-up-button:focus,
+.qa-vote-up-button:active {
 	background-position: 0 -10px;
 }
-
 .qa-vote-down-button {
 	background-position: -16px 0;
-	bottom: 10px;
+	bottom: 12px;
 }
-.qa-vote-down-button:hover, .qa-vote-down-button:focus, .qa-vote-down-button:active {
+.qa-vote-down-button:hover,
+.qa-vote-down-button:focus,
+.qa-vote-down-button:active {
 	background-position: -16px -10px;
 }
-
 .qa-vote-up-disabled {
-	background-position: 0 -40px;
-	top: 10px;
+	background-position: 0 -20px;
+	top: 12px;
 }
-.qa-vote-up-disabled:hover, .qa-vote-up-disabled:focus, .qa-vote-up-disabled:active {
-	background-position: 0 -40px;
+.qa-vote-up-disabled:hover,
+.qa-vote-up-disabled:focus,
+.qa-vote-up-disabled:active {
+	background-position: 0 -20px;
 }
-
 .qa-vote-down-disabled {
-	background-position: -16px -40px;
-	bottom: 10px;
+	background-position: -16px -20px;
+	bottom: 12px;
 }
-.qa-vote-down-disabled:hover, .qa-vote-down-disabled:focus, .qa-vote-down-disabled:active {
-	background-position: -16px -40px;
+.qa-vote-down-disabled:hover,
+.qa-vote-down-disabled:focus,
+.qa-vote-down-disabled:active {
+	background-position: -16px -20px;
 }
-
 .qa-voted-up-button {
 	background-position: 0 -10px;
 }
-.qa-voted-up-button:hover, .qa-voted-up-button:focus, .qa-voted-up-button:active {
+.qa-voted-up-button:hover,
+.qa-voted-up-button:focus,
+.qa-voted-up-button:active {
 	background-position: 0 0;
 }
-
 .qa-voted-down-button {
 	background-position: -16px -10px;
 }
-.qa-voted-down-button:hover, .qa-voted-down-button:focus, .qa-voted-down-button:active {
+.qa-voted-down-button:hover,
+.qa-voted-down-button:focus,
+.qa-voted-down-button:active {
 	background-position: -16px 0;
 }
 
@@ -2647,7 +2659,6 @@ input[type="submit"], button {
 	font-weight: normal;
 }
 
-
 .qa-c-list-item .qa-vote-up-button,
 .qa-c-list-item .qa-vote-down-button,
 .qa-c-list-item .qa-voted-up-button,
@@ -2676,7 +2687,6 @@ input[type="submit"], button {
 .qa-c-list-item .qa-vote-up-button:active {
 	background-position: -32px -8px;
 }
-
 .qa-c-list-item .qa-vote-down-button {
 	background-position: -44px 0;
 }
@@ -2685,25 +2695,22 @@ input[type="submit"], button {
 .qa-c-list-item .qa-vote-down-button:active {
 	background-position: -44px -8px;
 }
-
 .qa-c-list-item .qa-vote-up-disabled {
-	background-position: -32px -32px;
+	background-position: -32px -16px;
 }
 .qa-c-list-item .qa-vote-up-disabled:hover,
 .qa-c-list-item .qa-vote-up-disabled:focus,
 .qa-c-list-item .qa-vote-up-disabled:active {
-	background-position: -32px -32px;
+	background-position: -32px -16px;
 }
-
 .qa-c-list-item .qa-vote-down-disabled {
-	background-position: -44px -32px;
+	background-position: -44px -16px;
 }
 .qa-c-list-item .qa-vote-down-disabled:hover,
 .qa-c-list-item .qa-vote-down-disabled:focus,
 .qa-c-list-item .qa-vote-down-disabled:active {
-	background-position: -44px -32px;
+	background-position: -44px -16px;
 }
-
 .qa-c-list-item .qa-voted-up-button {
 	background-position: -32px -8px;
 }
@@ -2712,7 +2719,6 @@ input[type="submit"], button {
 .qa-c-list-item .qa-voted-up-button:active {
 	background-position: -32px 0;
 }
-
 .qa-c-list-item .qa-voted-down-button {
 	background-position: -44px -8px;
 }
